--- a/variables.yaml
+++ b/variables.yaml
@@ -2,18 +2,15 @@ addons:
   helm2:
     enabled: true
     binary_name: helm2
-    version: "2.17.0"
-    download_url: https://get.helm.sh/helm-v{{ addons.helm2.version }}-linux-amd64.tar.gz
+    download_url: https://get.helm.sh/helm-v2.17.0-linux-amd64.tar.gz
   helm3:
     enabled: true
     binary_name: helm3
-    version: "3.6.3"
-    download_url: https://get.helm.sh/helm-v{{ addons.helm3.version }}-linux-amd64.tar.gz
+    download_url: https://get.helm.sh/helm-v3.14.0-linux-amd64.tar.gz
   crictl:
     enabled: true
     binary_name: crictl
-    version: "1.28.0"
-    download_url: https://github.com/kubernetes-sigs/cri-tools/releases/download/v{{ addons.crictl.version }}/crictl-v{{ addons.crictl.version }}-linux-amd64.tar.gz
+    download_url: https://github.com/kubernetes-sigs/cri-tools/releases/download/v1.28.0/crictl-v1.28.0-linux-amd64.tar.gz
 #  vrrp:
 #    enabled: true
 #    address: YOUR_VIP_ADDRESS
